# saison

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  cabal.haskell-ci  cabal.project  saison.cabal
bench/: Laureates.hs  Pulls.hs
inputs/: pulls.json
saison-jsontestsuite/: saison-jsontestsuite.cabal
saison-jsontestsuite/src/Saison/: JSONTestSuite.hs
saison-jsontestsuite/test/: TestAeson.hs  TestSaison.hs
scripts/: perf.sh  unperf.sh
src/: Saison.hs
src-confusing/Data/Functor/: Confusing.hs
src/Saison/Decoding/: Class.hs  Examples.hs  Generic.hs  Parser.hs  Parser2.hs  Record.hs  Result.hs  Tokens.hs  Value.hs
test/: Tests.hs
