cabal-version: 2.4
name:          saison
version:       0.1
synopsis:      Stream Aeson, fruity, spicy, well carbonated
description:
  Saison is a JSON library. It represents JSON document as a well-formed
  token stream.  This way most of grammatical structure is still preserved: you
  can decide what to do with duplicate keys per decoded type etc.  Potentially
  faster when parsing sparsely, i.e. omitting a lot of data.

category:      Text, Web, JSON
homepage:      https://github.com/phadej/saison
bug-reports:   https://github.com/phadej/saison/issues
copyright:     2017-2019 Oleg Grenrus
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD-3-Clause
license-file:  LICENSE
tested-with:
  GHC ==8.6.5 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3 || ==7.8.4

source-repository head
  type:     git
  location: https://github.com/phadej/saison.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
    , aeson
    , attoparsec
    , base                  >=4.7 && <4.13
    , bytestring
    , deepseq
    , scientific
    , text
    , unordered-containers
    , vector

  if !impl(ghc >=7.10)
    build-depends: void ^>=0.7.2

  exposed-modules:  Saison
  other-extensions:
    BangPatterns
    OverloadedStrings

test-suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test
  build-depends:
    , aeson
    , base
    , bytestring
    , integer-logarithms
    , QuickCheck
    , quickcheck-instances
    , saison
    , tasty
    , tasty-hunit
    , tasty-quickcheck

benchmark bench-laureates
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Laureates.hs
  hs-source-dirs:   bench
  ghc-options:      -Wall -rtsopts
  build-depends:
    , aeson
    , base
    , base-compat
    , bytestring
    , criterion
    , saison
    , vector
