cabal-version:      2.4
name:               saison
version:            0.1
synopsis:           Stream Aeson, fruity, spicy, well carbonated
description:
  Saison is a JSON library. It represents JSON document as a well-formed
  token stream.  This way most of grammatical structure is still preserved: you
  can decide what to do with duplicate keys per decoded type etc.  Potentially
  faster when parsing sparsely, i.e. omitting a lot of data.

category:           Text, Web, JSON
homepage:           https://github.com/phadej/saison
bug-reports:        https://github.com/phadej/saison/issues
copyright:          2017-2019 Oleg Grenrus
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
extra-source-files: inputs/laureate.json
tested-with:
  GHC ==8.6.5 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3 || ==7.8.4

source-repository head
  type:     git
  location: https://github.com/phadej/saison.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Saison
    Saison.Decoding.Class
    Saison.Decoding.Examples
    Saison.Decoding.Parser
    Saison.Decoding.Result
    Saison.Decoding.Tokens
    Saison.Decoding.Value

  -- GHC boot dependencies
  build-depends:
    , base        >=4.7      && <4.13
    , bytestring  ^>=0.10.4.0
    , deepseq     ^>=1.3.0.2 || ^>=1.4.1.1
    , text        ^>=1.2.3.0

  -- other dependencies
  build-depends:
    , aeson                 ^>=1.4.4.0
    , attoparsec            ^>=0.13.2.2
    , base-compat           ^>=0.10.5
    , scientific            ^>=0.3.6.2
    , unordered-containers  ^>=0.2.9.0
    , vector                ^>=0.12.0.3

  if !impl(ghc >=7.10)
    build-depends: void ^>=0.7.3

  other-extensions:
    BangPatterns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables

test-suite saison-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test

  -- library dependencies
  build-depends:
    , aeson
    , base
    , bytestring
    , saison
    , text

  -- other dependencies
  build-depends:
    , integer-logarithms    ^>=1.0.3
    , QuickCheck            ^>=2.13.2
    , quickcheck-instances  ^>=0.3.22
    , tasty                 ^>=1.2.3
    , tasty-hunit           ^>=0.10.0.2
    , tasty-quickcheck      ^>=0.10.1

benchmark bench-laureates
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Laureates.hs
  hs-source-dirs:   bench
  ghc-options:      -Wall -rtsopts

  -- library dependencies
  build-depends:
    , aeson
    , base
    , bytestring
    , deepseq
    , saison
    , vector

  -- other dependencies
  build-depends:    criterion ^>=1.5.5.0
